# mars-coin

./: AppEntitlements.entitlements  Cargo.toml  Dioxus.toml  Info.plist  README.md  index.html  input.css  package-lock.json  tailwind.config.js  vercel.json
.github/workflows/: pages.yml  release.yaml  vercel.yml
public/: metadata.json  tailwind.css  worker.js
src/: file.rs  route.rs
src/components/: activity.rs  balance.rs  code_block.rs  copyable.rs  download.rs  footer.rs  home.rs  icons.rs  import_key.rs  landing.rs  mars_economics.rs  mod.rs  navbar.rs  settings.rs  tutorial.rs  tx.rs  user.rs  what_is_mining.rs
src/components/claim/: confirm.rs  done.rs  edit.rs  mod.rs  preview.rs
src/components/export_key/: secret.rs  warning.rs
src/components/miner_toolbar/: activating.rs  active.rs  insufficient_sol.rs  mod.rs  utils.rs
src/components/send/: confirm.rs  done.rs  edit.rs  mod.rs
src/gateway/: mod.rs  pubkey.rs
src/hooks/: mod.rs  use_clipboard.rs  use_mars_balance.rs  use_mars_supply.rs  use_miner.rs  use_miner_toolbar_state.rs  use_proof.rs  use_sol_balance.rs  use_treasury.rs
src/miner/: mod.rs  web_worker.rs
