[package]
name = "mars-coin"
version = "0.6.0"
description = "Mars is a cryptocurrency for sovereign individuals living in Mirascape Horizon across the galaxy."
edition = "2021"
license = "Apache-2.0"
homepage = "https://mars.miraland.io"
documentation = "https://mars.miraland.io"
repository = "https://github.com/miraland-labs/mars-coin"
readme = "./README.md"
keywords = ["solana", "crypto", "mining", "mars", "miraland"]

[features]
default = ["web"]
bundle = []
web = [
    "gloo",
    "gloo-storage",
    "js-sys",
    "serde-wasm-bindgen",
    "solana-client-wasm",
    "solana-extra-wasm",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "wasm-logger",
    "web-sys",
    "web-time",
]

[dependencies]
async-std = "1.12.0"
bincode = "1.3.3"
cached = "0.47.0"
chrono = "0.4.34"
dioxus = { version = "0.5", features = ["web", "router"] }
dioxus-std = { version = "0.5", features = ["clipboard", "utils"] }
# env_logger = { version = "0.11.2", optional = true }
futures = "0.3.30"
futures-util = "0.3.30"
gloo = { version = "0.11.0", optional = true }
gloo-storage = { version = "0.3.0", optional = true }
is-url = { version = "1.0.4" }
js-sys = { version = "0.3.67", optional = true }
lazy_static = "1.4"
log = "0.4.20"
mars = { package = "mars-program", version = "1.0.0", features = ["no-entrypoint"] }
ore-types = "0.0.7"
qrcode-generator = "4.1.9"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
serde_json = "1.0"
solana-client-wasm = { version = "1.18", optional = true }
solana-extra-wasm = { version = "1.18", optional = true }
url = "2.5.0"
wasm-bindgen = { version = "0.2.91", optional = true }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
web-time = { version = "1.0.0", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = [
    'console',
    'Clipboard',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    "IdbFactory", 
    "IdbDatabase", 
    "IdbObjectStore", 
    "IdbTransaction",
    'MessageEvent',
    'Navigator',
    'Window',
    'Worker',
    'WorkerOptions',
    'WorkerType',
    'WorkerGlobalScope',
]

[patch.crates-io]
solana-client-wasm = { version = "1.18", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
solana-extra-wasm = { version = "1.18", git = "https://github.com/regolith-labs/solana-playground", branch = "master" }
